<resources>
    <string name="app_name">蹭來蹭去</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--集成云信im 用到的-->
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="add_buddy">添加好友</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>

    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="begin_chat">聊天</string>
    <!-- 通讯录 -->
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>

    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>

    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="user_profile">个人名片</string>
    <!-- 个人名片 -->
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="signature">签 名</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="nickname">昵 称</string>
    <string name="alias">备注名</string>
    <string name="gender">性 别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="phone_number">手机号码</string>
    <string name="set_head_image">设置头像</string>
    <string name="user_info_update_success">设置成功</string>
    <string name="user_info_update_cancel">取消更新</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="head_update_success">头像设置成功</string>
    <string name="head_update_failed">头像设置失败，请重试</string>
    <string name="nickname_empty">昵称不能为空</string>

    <!-- setting -->
    <string name="settings">设置</string>
    <string name="no_disturb">免打扰</string>
    <string name="multiport_push">PC/Web在线推送</string>
    <string name="msg_notice">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_close">已关闭</string>
    <string name="no_disturb_tips">在设定的时间段内云信消息将不再提醒</string>
    <string name="time_from">从</string>
    <string name="time_to">至</string>
    <string name="time_from_default">22:00</string>
    <string name="time_to_default">08:00</string>
    <string name="black_list">黑名单</string>
    <string name="msg_speaker">听筒模式</string>
    <string name="ring">响铃模式</string>
    <string name="led">自定义呼吸灯</string>
    <string name="notice_content">通知栏标题定制</string>
    <string name="mass_message">批量消息测试</string>
    <string name="sqlite_fts">SQLite FTS4</string>
    <string name="sqlite_like">SQLite LIKE</string>
    <string name="luc">Lucene</string>
    <string name="clear_index">清理全文检索缓存</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="avchat_no_pick_up">未接听</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_file">发送文件</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="login">登录</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="prompt_phone">请输入账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册</string>
    <string name="logining">登录中\u2026</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="done">完成</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register">注册</string>
    <string name="has_account_login">已有帐号？直接登录</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="registering">注册中....</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="prepare_data">正在准备数据...</string>

    <string name="main_tab_session">消息</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="multiport_logging">正在使用</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="clear_all_success">清空成功</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="location_navigate">导航</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">正在定位</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="my_location">我的位置</string>
    <string name="chat_room">个人</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="custom_notification">自定义通知</string>
    <string name="logout">注销</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="verify_message">验证提醒</string>
    <string name="my_computer">我的电脑</string>
    <string name="verify_reminder">验证提醒</string>


</resources>
